# auditoria-skills-mcp

./: .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  pyproject.toml  server.json
.github/ISSUE_TEMPLATE/: actualizacion-marco.yml  config.yml  nuevo-skill.yml
.github/workflows/: publish.yml  validate.yml
auditoria_skills_mcp/: __init__.py  __main__.py  server.py
auditoria_skills_mcp/data/: catalog.json
auditoria_skills_mcp/data/skills/especialidades/ambiental/: README.md  SKILL.md
auditoria_skills_mcp/data/skills/especialidades/calidad/: README.md  SKILL.md
auditoria_skills_mcp/data/skills/especialidades/ciberseguridad/: README.md  SKILL.md
auditoria_skills_mcp/data/skills/especialidades/continua/: README.md  SKILL.md
auditoria_skills_mcp/data/skills/especialidades/cumplimiento/: README.md  SKILL.md
auditoria_skills_mcp/data/skills/especialidades/esg-sostenibilidad/: README.md  SKILL.md
auditoria_skills_mcp/data/skills/especialidades/financiera/: README.md  SKILL.md
auditoria_skills_mcp/data/skills/especialidades/forense/: README.md  SKILL.md
auditoria_skills_mcp/data/skills/especialidades/gestion-desempeno/: README.md  SKILL.md
auditoria_skills_mcp/data/skills/especialidades/inteligencia-artificial/: README.md  SKILL.md
auditoria_skills_mcp/data/skills/especialidades/operativa/: README.md  SKILL.md
auditoria_skills_mcp/data/skills/especialidades/tecnologia-informacion/: README.md  SKILL.md
auditoria_skills_mcp/data/skills/procesos/analitica-datos/: README.md  SKILL.md
(+14 files in other folders)
